feat(web): better ui powered by v0.dev & allow policy from user
